Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.6.2: May 27th, 2011

* for EAPI<4, expose MERGE_TYPE info via EMERGE_FROM; do this for compatibility
  with non-spec compliant ebuilds, and eclasses like linux-mod.  This restores
  in particular, binpkg support for kernel packages.  Thanks to Brian De Wolf
  for info leading to tracking this down.

* add support for stacking /etc/portage/make.conf on top of /etc/make.conf.

* add incrementalism between make.globals and make.conf to match changes
  in portage configuration parsing.  This fixes the common "I tried pkgcore
  and everything was license masked".  Breakage there owes to portage
  changing make.globals; can't do much about it unfortunately.  Thanks to
  Brian De Wolf for info leading to tracking this down.

* prefer 0755 permissions for binpkg package dir.

* pinspect pkgset learned --all option, to display all pkgsets it knows.


pkgcore 0.6.1: May 22nd, 2011

* fix for "or_node.blocks" AttributeError, and related resolution
  miscalculations.

* fix exit code return for ebuild helpers throwing warnings for <EAPI4

* fix typo in FEATURES=buildsyspkg, and FEATURES=buildpkg

* check to ensure pkgdir exists; if possible, create it, else turn off binpkg
  features.


pkgcore 0.6: April 24th, 2011

* Due to crazy work hours and moves, this release is fairly large, and frankly
  repeatedly delayed.  Future ones will be far more fine grained moving forward.

* Fix python2.7 incompatiblity in pkgcore.ebuild.misc

* It's suggested that folks use bash 4.1, primarily for regen
  speed reasons- it is not required however.

* bash spawning now enforce --norc and --noprofile in full.

* RESTRICT is now properly use evaluated.

* pkgcore.restrictions.values.ContainmentMatch is deprecated in favor of
  ContainmentMatch2.  Update your code- by pkgcore 0.7, ContainmentMatch
  will become ContainmentMatch2, and a shim will be left in place.
