@@ -21,8 +21,9 @@ BASH_BINARY          = "/bin/bash"
 COPY_BINARY          = "/bin/cp"
 PRELINK_BINARY       = "/usr/sbin/prelink"
 
-HOST_NONROOT_PATHS   = ("/usr/bin", "/bin")
-HOST_ROOT_PATHS      = ("/usr/sbin", "/usr/bin", "/sbin", "/bin")
+HOST_NONROOT_PATHS   = ("/usr/local/bin", "/usr/bin", "/bin")
+HOST_ROOT_PATHS      = ("/usr/local/sbin", "/usr/local/bin", "/usr/sbin",
+    "/usr/bin", "/sbin", "/bin")
 
 # no longer used.
 LIBFAKEROOT_PATH     = "/usr/lib/libfakeroot.so"
